<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/con3"
    tools:context="edu.mnstate.bv9599fk.ajayimajor1.result">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="991dp"
        android:layout_column="0"
        android:layout_row="2">

        <TextView
            android:id="@+id/txtIntro"
            android:layout_width="282dp"
            android:layout_height="111dp"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/strTellScore"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnHistory"
            android:layout_width="266dp"
            android:layout_height="100dp"
            android:layout_column="0"
            android:layout_row="1"
            android:onClick="handleHistory"
            android:text="@string/strHistory" />

        <TextView
            android:id="@+id/txtScore"
            android:layout_width="234dp"
            android:layout_height="139dp"
            android:layout_column="1"
            android:layout_row="0"
            android:textSize="36sp" />

        <Button
            android:id="@+id/btnRestart"
            android:layout_width="246dp"
            android:layout_height="96dp"
            android:layout_column="2"
            android:layout_row="1"
            android:onClick="handleRestart"
            android:text="@string/strRestart" />
    </GridLayout>

    <TextView
        android:id="@+id/txtTitleSubmit"
        android:layout_width="match_parent"
        android:layout_height="141dp"
        android:layout_column="0"
        android:layout_row="0"
        android:gravity="center"
        android:text="@string/strTitleResult"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_light"
        android:textSize="36sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="342dp"
        tools:layout_editor_absoluteY="41dp" />

</GridLayout>
