<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b1"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="edu.mnstate.bv9599fk.ajayimajor1.MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="154dp">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="423dp"
            android:layout_height="106dp"
            android:layout_weight="0.12"
            android:gravity="center"
            android:text="@string/title"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_light"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="91dp"
            tools:layout_editor_absoluteY="33dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="155dp"
            android:layout_height="108dp"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_weight="0.11"
            app:srcCompat="@mipmap/ic_launcher"
            tools:layout_editor_absoluteX="387dp"
            tools:layout_editor_absoluteY="16dp" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_weight="0.11">

        <EditText
            android:id="@+id/editName"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_weight="0.12"
            android:background="@android:color/background_light"
            android:ems="10"
            android:fontFamily="serif"
            android:inputType="textCapSentences"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="430dp"
            tools:layout_editor_absoluteY="119dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="329dp"
            android:layout_height="113dp"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_weight="0.03"
            android:text="@string/strName"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="117dp"
            tools:layout_editor_absoluteY="131dp" />
    </GridLayout>

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="218dp"
        android:layout_height="76dp"
        android:background="@android:color/background_light"
        android:onClick="myStartQuiz"
        android:text="@string/btnStart"
        tools:layout_editor_absoluteX="215dp"
        tools:layout_editor_absoluteY="226dp" />

</LinearLayout>
